<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/preference_proxy">
        <EditTextPreference
                android:key="preference_proxy_port"
                android:title="@string/preference_proxy_port_text"
                android:summary=""
                android:defaultValue = "@string/preference_proxy_port_value"
                android:dialogTitle="@string/preference_proxy_port_text" />
        <CheckBoxPreference
                android:key="preference_proxy_listen_non_local"
                android:title="@string/preference_proxy_non_local_text"
                android:summary="@string/preference_proxy_non_local_summary"
                android:defaultValue = "false" />
        <CheckBoxPreference
                android:key="preference_proxy_transparent"
                android:title="@string/preference_proxy_transparent_text"
                android:summary="@string/preference_proxy_transparent_summary"
                android:defaultValue = "false" />
        <EditTextPreference
                android:key="preference_proxy_data_storage"
                android:title="@string/preference_proxy_data_storage_path"
                android:summary="@string/preference_proxy_data_storage_path_summary"
                android:defaultValue = "@string/preference_proxy_data_storage_path_value" />
    </PreferenceCategory>
	<PreferenceCategory
	    android:title="@string/preference_client_certificate">
	 <EditTextPreference
	         android:key="preference_client_cert_file_path"
	         android:title="@string/preference_cert_file_path_text"
	         android:summary=""
	         android:defaultValue = "@string/preference_client_cert_file_path_value"
	         android:dialogTitle="@string/preference_cert_file_path_text" />
	 <EditTextPreference
	        android:key="preference_client_cert_password"
	        android:title="@string/preference_cert_password_text"
	        android:summary=""
	        android:defaultValue = "@string/preference_client_cert_password_value"
	        android:dialogTitle="@string/preference_cert_password_text" 
	        android:password = "true"
	        />
	</PreferenceCategory>
	
	<PreferenceCategory
	       android:title="@string/preference_ca_certificate"
	       >
	       <EditTextPreference
	               android:key="preference_ca_cert_file_path"
	               android:title="@string/preference_cert_file_path_text"
	               android:summary="@string/not_implemented_yet"
	               android:defaultValue = "@string/preference_ca_cert_file_path_value"
	               android:enabled="false"
	               android:dialogTitle="@string/preference_cert_file_path_text" 
	               />
	       <EditTextPreference
	           android:key="preference_ca_cert_password"
	           android:title="@string/preference_cert_password_text"
	           android:summary="@string/not_implemented_yet"
	           android:enabled="false"
	           android:defaultValue = "@string/preference_ca_cert_password_value"
	           android:dialogTitle="@string/preference_cert_password_text" 
	           android:password = "true"
	           />
	</PreferenceCategory>
	<PreferenceCategory 
	   android:title="@string/html_manipulation">
	    <CheckBoxPreference
                android:key="@string/revealhidden_enabled"
                android:title="@string/reveal_hidden_fields"
                android:summary="@string/show_hidden_input_fields_on_as_input"
                android:defaultValue = "false" />
	    <CheckBoxPreference
                android:key="@string/cache_disabler_key"
                android:title="@string/cache_disabler_text"
                android:summary="@string/cache_disabler_summary"
                android:defaultValue = "false" />
	</PreferenceCategory>
</PreferenceScreen>